<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/firstNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="66dp"
        android:text="@string/firstNameLabelText"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/firstNameFormField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/firstNameFormField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="99dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/firstNameFieldText"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/emailAddressFormField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/enterEmailFormFieldText"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameFormField"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/lastNameFormField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/lastNameFormFieldText"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameFormField" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="67dp"
        android:text="@string/lastNameLabelText"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/lastNameFormField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameLabel" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="46dp"
        android:text="@string/emailAddressLabelText"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/formSubmitButton"
        app:layout_constraintEnd_toStartOf="@+id/emailAddressFormField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/formSubmitButton"
        android:layout_width="178dp"
        android:layout_height="50dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="55dp"
        android:text="@string/formSubmitButtonText"
        app:layout_constraintBottom_toTopOf="@+id/formDetailsLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddressFormField" />

    <Button
        android:id="@+id/formGoBackButton"
        android:layout_width="178dp"
        android:layout_height="50dp"
        android:layout_marginStart="117dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="30dp"
        android:text="@string/formGoBackButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formDetailsLabel" />

    <TextView
        android:id="@+id/formDetailsLabel"
        android:layout_width="374dp"
        android:layout_height="243dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="101dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>