<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="292dp"
        android:layout_height="149dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/header_logo_image"
        app:layout_constraintBottom_toTopOf="@+id/alertButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bstack_logo"
        tools:src="@drawable/bstack_logo" />

    <Button
        android:id="@+id/alertButton"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="101dp"
        android:text="@string/alertButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/textFieldButton"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="101dp"
        android:text="@string/textFieldButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alertButton" />

    <Button
        android:id="@+id/formButton"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="101dp"
        android:text="@string/formButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldButton" />

    <Button
        android:id="@+id/dateButton"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="101dp"
        android:text="@string/dateButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formButton" />

    <Button
        android:id="@+id/switchButton"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="101dp"
        android:text="@string/switchButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateButton" />

    <Button
        android:id="@+id/listButton"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="101dp"
        android:text="@string/listButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchButton" />
</androidx.constraintlayout.widget.ConstraintLayout>