...
    <string name="switchButtonText">Switches</string>
    <string name="listButtonText">Lists</string>
    <string name="dateButtonText">Date Picker</string>
    <string name="formButtonText">Form</string>
    <string name="textFieldButtonText">Text Field</string>
    <string name="alertButtonText">Alert</string>
    <string name="alertPageText">You are on the Alert page!</string>
    <string name="alertPageGoBackButtonText">Go Back</string>
    <string name="enterTextbuttonText">Submit</string>
    <string name="enterTextBoxText">Enter text...</string>
    <string name="enteredTextLabelText">Entered Text:</string>
    <string name="enterTextHintText">Enter some text</string>
    <string name="textFieldPageGoBackButtonText">Go Back</string>
...
    <string name="firstNameFieldText">Enter first name...</string>
    <string name="lastNameFormFieldText">Enter last name...</string>
    <string name="enterEmailFormFieldText">Enter email</string>
    <string name="formGoBackButtonText">Go Back</string>
    <string name="datePageGoBackButtonText">Go Back</string>
    <string name="switchPageGoBackButtonText">Go Back</string>
    <string name="switchOneText">Off</string>
    <string name="switchThreeText">Off</string>
    <string name="switchTwoText">Off</string>
    <string name="switchFourText">Off</string>
    <string name="switchFiveText">Off</string>
</resources>
