<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/switchFiveLabel"
        android:layout_width="108dp"
        android:layout_height="26dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="159dp"
        android:text="@string/switchFiveText"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchFourLabel" />

    <TextView
        android:id="@+id/switchFourLabel"
        android:layout_width="108dp"
        android:layout_height="26dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="159dp"
        android:text="@string/switchFourText"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchThreeLabel" />

    <TextView
        android:id="@+id/switchThreeLabel"
        android:layout_width="108dp"
        android:layout_height="26dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="159dp"
        android:text="@string/switchThreeText"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchTwoLabel" />

    <Switch
        android:id="@+id/switchOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="82dp"
        android:showText="false"
        app:layout_constraintEnd_toStartOf="@+id/switchOneLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <Switch
        android:id="@+id/switchFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="384dp"
        android:showText="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/switchFiveLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchFour"
        tools:ignore="TouchTargetSizeCheck" />

    <Switch
        android:id="@+id/switchFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="82dp"
        android:showText="false"
        app:layout_constraintEnd_toStartOf="@+id/switchFourLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchThree"
        tools:ignore="TouchTargetSizeCheck" />

    <Switch
        android:id="@+id/switchThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="82dp"
        android:showText="false"
        app:layout_constraintEnd_toStartOf="@+id/switchThreeLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchTwo"
        tools:ignore="TouchTargetSizeCheck" />

    <Switch
        android:id="@+id/switchTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="82dp"
        android:showText="false"
        app:layout_constraintEnd_toStartOf="@+id/switchTwoLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchOne"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/switchOneLabel"
        android:layout_width="108dp"
        android:layout_height="26dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="159dp"
        android:text="@string/switchOneText"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/switchTwoLabel"
        android:layout_width="108dp"
        android:layout_height="26dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="159dp"
        android:text="@string/switchTwoText"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchOneLabel" />

    <Button
        android:id="@+id/switchPageGoBackButton"
        android:layout_width="166dp"
        android:layout_height="48dp"
        android:layout_marginStart="122dp"
        android:layout_marginEnd="123dp"
        android:layout_marginBottom="224dp"
        android:text="@string/switchPageGoBackButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>